common/functions-v2/tests/it/scalars/testdata/arithmetic.txt
ast            : a + b
raw expr       : +(ColumnRef(0)::Int8, ColumnRef(2)::Int16)
checked expr   : +<Int8, Int16>(ColumnRef(0), ColumnRef(2))
evaluation:
+--------+---------+------------------+---------+-----------+---------+
|        | a       | a2               | b       | c         | Output  |
+--------+---------+------------------+---------+-----------+---------+
| Type   | Int8    | UInt8 NULL       | Int16   | UInt32    | Int32   |
| Domain | {1..=3} | {1..=3} ∪ {NULL} | {2..=6} | {10..=30} | {3..=9} |
| Row 0  | 1       | 1                | 2       | 10        | 3       |
| Row 1  | 2       | 2                | 4       | 20        | 6       |
| Row 2  | 3       | NULL             | 6       | 30        | 9       |
+--------+---------+------------------+---------+-----------+---------+
evaluation (internal):
+--------+-------------------------------------------------------------------------------+
| Column | Data                                                                          |
+--------+-------------------------------------------------------------------------------+
| a      | Int8([1, 2, 3])                                                               |
| a2     | Nullable(NullableColumn { column: UInt8([1, 2, 3]), validity: [0b_____011] }) |
| b      | Int16([2, 4, 6])                                                              |
| c      | UInt32([10, 20, 30])                                                          |
| Output | Int32([3, 6, 9])                                                              |
+--------+-------------------------------------------------------------------------------+


ast            : a2 + 10
raw expr       : +(ColumnRef(1)::UInt8 NULL, 10_u8)
checked expr   : +<UInt8 NULL, UInt8 NULL>(ColumnRef(1), CAST(10_u8 AS UInt8 NULL))
optimized expr : +<UInt8 NULL, UInt8 NULL>(ColumnRef(1), 10_u8)
evaluation:
+--------+---------+------------------+---------+-----------+--------------------+
|        | a       | a2               | b       | c         | Output             |
+--------+---------+------------------+---------+-----------+--------------------+
| Type   | Int8    | UInt8 NULL       | Int16   | UInt32    | UInt16 NULL        |
| Domain | {1..=3} | {1..=3} ∪ {NULL} | {2..=6} | {10..=30} | {11..=13} ∪ {NULL} |
| Row 0  | 1       | 1                | 2       | 10        | 11                 |
| Row 1  | 2       | 2                | 4       | 20        | 12                 |
| Row 2  | 3       | NULL             | 6       | 30        | NULL               |
+--------+---------+------------------+---------+-----------+--------------------+
evaluation (internal):
+--------+-----------------------------------------------------------------------------------+
| Column | Data                                                                              |
+--------+-----------------------------------------------------------------------------------+
| a      | Int8([1, 2, 3])                                                                   |
| a2     | Nullable(NullableColumn { column: UInt8([1, 2, 3]), validity: [0b_____011] })     |
| b      | Int16([2, 4, 6])                                                                  |
| c      | UInt32([10, 20, 30])                                                              |
| Output | Nullable(NullableColumn { column: UInt16([11, 12, 13]), validity: [0b_____011] }) |
+--------+-----------------------------------------------------------------------------------+


ast            : a2 + c
raw expr       : +(ColumnRef(1)::UInt8 NULL, ColumnRef(3)::UInt32)
checked expr   : +<UInt8 NULL, UInt32 NULL>(ColumnRef(1), CAST(ColumnRef(3) AS UInt32 NULL))
evaluation:
+--------+---------+------------------+---------+-----------+--------------------+
|        | a       | a2               | b       | c         | Output             |
+--------+---------+------------------+---------+-----------+--------------------+
| Type   | Int8    | UInt8 NULL       | Int16   | UInt32    | UInt64 NULL        |
| Domain | {1..=3} | {1..=3} ∪ {NULL} | {2..=6} | {10..=30} | {11..=33} ∪ {NULL} |
| Row 0  | 1       | 1                | 2       | 10        | 11                 |
| Row 1  | 2       | 2                | 4       | 20        | 22                 |
| Row 2  | 3       | NULL             | 6       | 30        | NULL               |
+--------+---------+------------------+---------+-----------+--------------------+
evaluation (internal):
+--------+-----------------------------------------------------------------------------------+
| Column | Data                                                                              |
+--------+-----------------------------------------------------------------------------------+
| a      | Int8([1, 2, 3])                                                                   |
| a2     | Nullable(NullableColumn { column: UInt8([1, 2, 3]), validity: [0b_____011] })     |
| b      | Int16([2, 4, 6])                                                                  |
| c      | UInt32([10, 20, 30])                                                              |
| Output | Nullable(NullableColumn { column: UInt64([11, 22, 33]), validity: [0b_____011] }) |
+--------+-----------------------------------------------------------------------------------+


ast            : c + b
raw expr       : +(ColumnRef(3)::UInt32, ColumnRef(2)::Int16)
checked expr   : +<UInt32, Int16>(ColumnRef(3), ColumnRef(2))
evaluation:
+--------+---------+------------------+---------+-----------+-----------+
|        | a       | a2               | b       | c         | Output    |
+--------+---------+------------------+---------+-----------+-----------+
| Type   | Int8    | UInt8 NULL       | Int16   | UInt32    | Int64     |
| Domain | {1..=3} | {1..=3} ∪ {NULL} | {2..=6} | {10..=30} | {12..=36} |
| Row 0  | 1       | 1                | 2       | 10        | 12        |
| Row 1  | 2       | 2                | 4       | 20        | 24        |
| Row 2  | 3       | NULL             | 6       | 30        | 36        |
+--------+---------+------------------+---------+-----------+-----------+
evaluation (internal):
+--------+-------------------------------------------------------------------------------+
| Column | Data                                                                          |
+--------+-------------------------------------------------------------------------------+
| a      | Int8([1, 2, 3])                                                               |
| a2     | Nullable(NullableColumn { column: UInt8([1, 2, 3]), validity: [0b_____011] }) |
| b      | Int16([2, 4, 6])                                                              |
| c      | UInt32([10, 20, 30])                                                          |
| Output | Int64([12, 24, 36])                                                           |
+--------+-------------------------------------------------------------------------------+


error: 
  --> SQL:1:3
  |
1 | a - b
  |   ^ no overload satisfies `-(Int8, Int16)`



error: 
  --> SQL:1:4
  |
1 | a2 - 10
  |    ^ no overload satisfies `-(UInt8 NULL, UInt8)`



error: 
  --> SQL:1:4
  |
1 | a2 - c
  |    ^ no overload satisfies `-(UInt8 NULL, UInt32)`



error: 
  --> SQL:1:3
  |
1 | c - b
  |   ^ no overload satisfies `-(UInt32, Int16)`



ast            : a  * b
raw expr       : *(ColumnRef(0)::Int8, ColumnRef(2)::Int16)
checked expr   : *<Int8, Int16>(ColumnRef(0), ColumnRef(2))
evaluation:
+--------+---------+------------------+---------+-----------+----------+
|        | a       | a2               | b       | c         | Output   |
+--------+---------+------------------+---------+-----------+----------+
| Type   | Int8    | UInt8 NULL       | Int16   | UInt32    | Int32    |
| Domain | {1..=3} | {1..=3} ∪ {NULL} | {2..=6} | {10..=30} | {2..=18} |
| Row 0  | 1       | 1                | 2       | 10        | 2        |
| Row 1  | 2       | 2                | 4       | 20        | 8        |
| Row 2  | 3       | NULL             | 6       | 30        | 18       |
+--------+---------+------------------+---------+-----------+----------+
evaluation (internal):
+--------+-------------------------------------------------------------------------------+
| Column | Data                                                                          |
+--------+-------------------------------------------------------------------------------+
| a      | Int8([1, 2, 3])                                                               |
| a2     | Nullable(NullableColumn { column: UInt8([1, 2, 3]), validity: [0b_____011] }) |
| b      | Int16([2, 4, 6])                                                              |
| c      | UInt32([10, 20, 30])                                                          |
| Output | Int32([2, 8, 18])                                                             |
+--------+-------------------------------------------------------------------------------+


ast            : a2 * 10
raw expr       : *(ColumnRef(1)::UInt8 NULL, 10_u8)
checked expr   : *<UInt8 NULL, UInt8 NULL>(ColumnRef(1), CAST(10_u8 AS UInt8 NULL))
optimized expr : *<UInt8 NULL, UInt8 NULL>(ColumnRef(1), 10_u8)
evaluation:
+--------+---------+------------------+---------+-----------+--------------------+
|        | a       | a2               | b       | c         | Output             |
+--------+---------+------------------+---------+-----------+--------------------+
| Type   | Int8    | UInt8 NULL       | Int16   | UInt32    | UInt16 NULL        |
| Domain | {1..=3} | {1..=3} ∪ {NULL} | {2..=6} | {10..=30} | {10..=30} ∪ {NULL} |
| Row 0  | 1       | 1                | 2       | 10        | 10                 |
| Row 1  | 2       | 2                | 4       | 20        | 20                 |
| Row 2  | 3       | NULL             | 6       | 30        | NULL               |
+--------+---------+------------------+---------+-----------+--------------------+
evaluation (internal):
+--------+-----------------------------------------------------------------------------------+
| Column | Data                                                                              |
+--------+-----------------------------------------------------------------------------------+
| a      | Int8([1, 2, 3])                                                                   |
| a2     | Nullable(NullableColumn { column: UInt8([1, 2, 3]), validity: [0b_____011] })     |
| b      | Int16([2, 4, 6])                                                                  |
| c      | UInt32([10, 20, 30])                                                              |
| Output | Nullable(NullableColumn { column: UInt16([10, 20, 30]), validity: [0b_____011] }) |
+--------+-----------------------------------------------------------------------------------+


ast            : a2 * c
raw expr       : *(ColumnRef(1)::UInt8 NULL, ColumnRef(3)::UInt32)
checked expr   : *<UInt8 NULL, UInt32 NULL>(ColumnRef(1), CAST(ColumnRef(3) AS UInt32 NULL))
evaluation:
+--------+---------+------------------+---------+-----------+--------------------+
|        | a       | a2               | b       | c         | Output             |
+--------+---------+------------------+---------+-----------+--------------------+
| Type   | Int8    | UInt8 NULL       | Int16   | UInt32    | UInt64 NULL        |
| Domain | {1..=3} | {1..=3} ∪ {NULL} | {2..=6} | {10..=30} | {10..=90} ∪ {NULL} |
| Row 0  | 1       | 1                | 2       | 10        | 10                 |
| Row 1  | 2       | 2                | 4       | 20        | 40                 |
| Row 2  | 3       | NULL             | 6       | 30        | NULL               |
+--------+---------+------------------+---------+-----------+--------------------+
evaluation (internal):
+--------+-----------------------------------------------------------------------------------+
| Column | Data                                                                              |
+--------+-----------------------------------------------------------------------------------+
| a      | Int8([1, 2, 3])                                                                   |
| a2     | Nullable(NullableColumn { column: UInt8([1, 2, 3]), validity: [0b_____011] })     |
| b      | Int16([2, 4, 6])                                                                  |
| c      | UInt32([10, 20, 30])                                                              |
| Output | Nullable(NullableColumn { column: UInt64([10, 40, 90]), validity: [0b_____011] }) |
+--------+-----------------------------------------------------------------------------------+


ast            : c * b
raw expr       : *(ColumnRef(3)::UInt32, ColumnRef(2)::Int16)
checked expr   : *<UInt32, Int16>(ColumnRef(3), ColumnRef(2))
evaluation:
+--------+---------+------------------+---------+-----------+------------+
|        | a       | a2               | b       | c         | Output     |
+--------+---------+------------------+---------+-----------+------------+
| Type   | Int8    | UInt8 NULL       | Int16   | UInt32    | Int64      |
| Domain | {1..=3} | {1..=3} ∪ {NULL} | {2..=6} | {10..=30} | {20..=180} |
| Row 0  | 1       | 1                | 2       | 10        | 20         |
| Row 1  | 2       | 2                | 4       | 20        | 80         |
| Row 2  | 3       | NULL             | 6       | 30        | 180        |
+--------+---------+------------------+---------+-----------+------------+
evaluation (internal):
+--------+-------------------------------------------------------------------------------+
| Column | Data                                                                          |
+--------+-------------------------------------------------------------------------------+
| a      | Int8([1, 2, 3])                                                               |
| a2     | Nullable(NullableColumn { column: UInt8([1, 2, 3]), validity: [0b_____011] }) |
| b      | Int16([2, 4, 6])                                                              |
| c      | UInt32([10, 20, 30])                                                          |
| Output | Int64([20, 80, 180])                                                          |
+--------+-------------------------------------------------------------------------------+


ast            : a / b
raw expr       : /(ColumnRef(0)::Int8, ColumnRef(2)::Int16)
checked expr   : /<Int8, Int16>(ColumnRef(0), ColumnRef(2))
evaluation:
+--------+---------+------------------+---------+-----------+---------+
|        | a       | a2               | b       | c         | Output  |
+--------+---------+------------------+---------+-----------+---------+
| Type   | Int8    | UInt8 NULL       | Int16   | UInt32    | Float64 |
| Domain | {1..=3} | {1..=3} ∪ {NULL} | {2..=6} | {10..=30} | Unknown |
| Row 0  | 1       | 1                | 2       | 10        | 0.5     |
| Row 1  | 2       | 2                | 4       | 20        | 0.5     |
| Row 2  | 3       | NULL             | 6       | 30        | 0.5     |
+--------+---------+------------------+---------+-----------+---------+
evaluation (internal):
+--------+-------------------------------------------------------------------------------+
| Column | Data                                                                          |
+--------+-------------------------------------------------------------------------------+
| a      | Int8([1, 2, 3])                                                               |
| a2     | Nullable(NullableColumn { column: UInt8([1, 2, 3]), validity: [0b_____011] }) |
| b      | Int16([2, 4, 6])                                                              |
| c      | UInt32([10, 20, 30])                                                          |
| Output | Float64([0.5, 0.5, 0.5])                                                      |
+--------+-------------------------------------------------------------------------------+


ast            : a2 / 10
raw expr       : /(ColumnRef(1)::UInt8 NULL, 10_u8)
checked expr   : /<UInt8 NULL, UInt8 NULL>(ColumnRef(1), CAST(10_u8 AS UInt8 NULL))
optimized expr : /<UInt8 NULL, UInt8 NULL>(ColumnRef(1), 10_u8)
evaluation:
+--------+---------+------------------+---------+-----------+--------------+
|        | a       | a2               | b       | c         | Output       |
+--------+---------+------------------+---------+-----------+--------------+
| Type   | Int8    | UInt8 NULL       | Int16   | UInt32    | Float64 NULL |
| Domain | {1..=3} | {1..=3} ∪ {NULL} | {2..=6} | {10..=30} | Unknown      |
| Row 0  | 1       | 1                | 2       | 10        | 0.1          |
| Row 1  | 2       | 2                | 4       | 20        | 0.2          |
| Row 2  | 3       | NULL             | 6       | 30        | NULL         |
+--------+---------+------------------+---------+-----------+--------------+
evaluation (internal):
+--------+---------------------------------------------------------------------------------------+
| Column | Data                                                                                  |
+--------+---------------------------------------------------------------------------------------+
| a      | Int8([1, 2, 3])                                                                       |
| a2     | Nullable(NullableColumn { column: UInt8([1, 2, 3]), validity: [0b_____011] })         |
| b      | Int16([2, 4, 6])                                                                      |
| c      | UInt32([10, 20, 30])                                                                  |
| Output | Nullable(NullableColumn { column: Float64([0.1, 0.2, 0.3]), validity: [0b_____011] }) |
+--------+---------------------------------------------------------------------------------------+


ast            : a2 / c
raw expr       : /(ColumnRef(1)::UInt8 NULL, ColumnRef(3)::UInt32)
checked expr   : /<UInt8 NULL, UInt32 NULL>(ColumnRef(1), CAST(ColumnRef(3) AS UInt32 NULL))
evaluation:
+--------+---------+------------------+---------+-----------+--------------+
|        | a       | a2               | b       | c         | Output       |
+--------+---------+------------------+---------+-----------+--------------+
| Type   | Int8    | UInt8 NULL       | Int16   | UInt32    | Float64 NULL |
| Domain | {1..=3} | {1..=3} ∪ {NULL} | {2..=6} | {10..=30} | Unknown      |
| Row 0  | 1       | 1                | 2       | 10        | 0.1          |
| Row 1  | 2       | 2                | 4       | 20        | 0.1          |
| Row 2  | 3       | NULL             | 6       | 30        | NULL         |
+--------+---------+------------------+---------+-----------+--------------+
evaluation (internal):
+--------+---------------------------------------------------------------------------------------+
| Column | Data                                                                                  |
+--------+---------------------------------------------------------------------------------------+
| a      | Int8([1, 2, 3])                                                                       |
| a2     | Nullable(NullableColumn { column: UInt8([1, 2, 3]), validity: [0b_____011] })         |
| b      | Int16([2, 4, 6])                                                                      |
| c      | UInt32([10, 20, 30])                                                                  |
| Output | Nullable(NullableColumn { column: Float64([0.1, 0.1, 0.1]), validity: [0b_____011] }) |
+--------+---------------------------------------------------------------------------------------+


ast            : divide(c, b)
raw expr       : divide(ColumnRef(3)::UInt32, ColumnRef(2)::Int16)
checked expr   : /<UInt32, Int16>(ColumnRef(3), ColumnRef(2))
evaluation:
+--------+---------+------------------+---------+-----------+---------+
|        | a       | a2               | b       | c         | Output  |
+--------+---------+------------------+---------+-----------+---------+
| Type   | Int8    | UInt8 NULL       | Int16   | UInt32    | Float64 |
| Domain | {1..=3} | {1..=3} ∪ {NULL} | {2..=6} | {10..=30} | Unknown |
| Row 0  | 1       | 1                | 2       | 10        | 5.0     |
| Row 1  | 2       | 2                | 4       | 20        | 5.0     |
| Row 2  | 3       | NULL             | 6       | 30        | 5.0     |
+--------+---------+------------------+---------+-----------+---------+
evaluation (internal):
+--------+-------------------------------------------------------------------------------+
| Column | Data                                                                          |
+--------+-------------------------------------------------------------------------------+
| a      | Int8([1, 2, 3])                                                               |
| a2     | Nullable(NullableColumn { column: UInt8([1, 2, 3]), validity: [0b_____011] }) |
| b      | Int16([2, 4, 6])                                                              |
| c      | UInt32([10, 20, 30])                                                          |
| Output | Float64([5.0, 5.0, 5.0])                                                      |
+--------+-------------------------------------------------------------------------------+


error: 
  --> SQL:1:4
  |
1 | a  div b
  |    ^^^ no overload satisfies `div(Int8, Int16)`



error: 
  --> SQL:1:4
  |
1 | a2 div 10
  |    ^^^ no overload satisfies `div(UInt8 NULL, UInt8)`



error: 
  --> SQL:1:4
  |
1 | a2 div c
  |    ^^^ no overload satisfies `div(UInt8 NULL, UInt32)`



error: 
  --> SQL:1:3
  |
1 | c div b
  |   ^^^ no overload satisfies `div(UInt32, Int16)`



